# 3-package-polar_bear

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: test.yml
bs_generator/: __init__.py  brain_rot.py  emoji.py  emotion.py  uwu.py  wingdings.py
tests/: test_brain_rot.py  test_emoji.py  test_emotion.py  test_uwu.py  test_wingdings.py
