[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bs_generator"
version = "0.1.0"
description = "A Python package for Gen-Z slang mutation and terminal joy."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name="Harry"},
    {name="Claire"},
    {name="Frank"},
    {name="Angelina"},
    {name="Howard"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bs_generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]